--- a/futuristic/src/Component/Homepage/Navbar.module.css
+++ b/futuristic/src/Component/Homepage/Navbar.module.css
@@ -1,9 +1,10 @@
 .Navbar_link_wrap{
- display: flex;
- justify-content: space-between;
+ /* display: flex;
+ justify-content: space-between; */
  width: 100%;
+ box-shadow: rgba(202, 202, 229, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 
- border:1px solid black;
+ border:1px rgb(143, 131, 131);
 }
 .Navbar_login_wrap{
     display: flex;
@@ -18,4 +19,15 @@
 .Navbar_logo_and_search img{
     width: 100px;
     height: 50px;
+}
+.Navbar_logo_wrap{
+    width: 150px;
+    height: 50px;
+}
+.Navbar_logo_wrap>img{
+ width: 100%;
+ height: 100%;
+}
+input[type="text"]{
+    
 }
