--- a/futuristic/src/Component/Homepage/Navbar.module.css
+++ b/futuristic/src/Component/Homepage/Navbar.module.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
     width: 50%;
 }
-.Navbar_logo_and_search img{
+.Navbar_logo_and_search>img{
     width: 100px;
     height: 50px;
 }
@@ -29,6 +29,4 @@
  width: 100%;
  height: 100%;
 }
-input[type="text"]{
-    
-}
+
