--- a/futuristic/src/Component/Courses/CoursesBox.module.css
+++ b/futuristic/src/Component/Courses/CoursesBox.module.css
@@ -2,8 +2,7 @@
     width: 500px;
     height: 300px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(221, 210, 210, 0.23) 0px 3px 6px;
-    border: 2px solid rgb(240, 226, 226);;
-    
+    border: 2px solid rgb(240, 226, 226);;  
 }
 .Coursesbox_img_disc_wrap{
     display: flex;
@@ -16,6 +15,8 @@
   margin-left: 10px;
   /* border-radius: 50%; */
 }
+
+/*feedback: fp02_102 - you can use css grouping */
 .Course_imgbox_wrap img{
     width:100%;
     height: 100%;
